# daily_report

./: .env.example  .gitignore  AGENT_PROMPT.md  QUICKSTART.md  SECURITY.md  bk_daily_report_mcp.py  daily_report_config.example.yml  daily_report_config.yml  example_mcp_client.py  mcp_config.json  pyproject.toml  requirements_mcp.txt  upload_report.py
